# DroidWorks

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
doc/: Makefile  rules.tex  typecheck.tex
dw-drop/: README.md  icon_1240_1240.xcf  index.html  justfile  package-lock.json  package.json  vite.config.ts
dw-drop/docs/source/: conf.py  dex.rst  fichiers.rst  index.rst  manifeste.rst  nsc.rst  signature.rst
dw-drop/src/: App.vue  i18n.ts  main.ts
dw-drop/src-tauri/: Cargo.toml  tauri.conf.json
dw-drop/src-tauri/icons/: icon.icns
dw-drop/src-tauri/src/: errors.rs  main.rs  state.rs
dw-drop/src-tauri/src/commands/: apksigner.rs  dex.rs  files.rs  help.rs  manifest.rs  mod.rs  nsc.rs
dw-drop/src/components/: ApkSignerModal.vue  ContactForm.vue  LoadingSpinner.vue  MsgToasts.vue  TabMenu.vue  TopMenu.vue
dw-drop/src/components/files/: FileItem.vue
dw-drop/src/components/manifest/: FlagItem.vue  FlagList.vue  GenericList.vue  ListItem.vue
dw-drop/src/data/manifest/: features.ts  permissions.ts
dw-drop/src/router/: index.ts
dw-drop/src/store/: index.ts
dw-drop/src/store/modules/: dex.ts  files.ts  global.ts  manifest.ts  nsc.ts
dw-drop/src/typings/: filenames.ts  nsc.ts  status.ts  toast.ts
dw-drop/src/typings/manifest/: flag.ts  info.ts  item.ts
dw-drop/src/views/: DexTab.vue  DragAndDrop.vue  FilesTab.vue  ManifestTab.vue  NSCTab.vue
fuzz/: Cargo.toml
fuzz/fuzz_targets/: arsc_parsing.rs  dex_parsing.rs
lib/dw_analysis/: Cargo.toml
lib/dw_analysis/src/: callgraph.rs  controlflow.rs  errors.rs  hierarchy.rs  lib.rs  stats.rs
lib/dw_analysis/src/dataflow/: backward.rs  forward.rs  mod.rs
lib/dw_analysis/src/information_flow/: amg.rs  errors.rs  mod.rs  signature.rs
lib/dw_analysis/src/repo/: class.rs  field.rs  method.rs  mod.rs  repository.rs  uids.rs
lib/dw_analysis/src/typing/: backward.rs  errors.rs  forward.rs  mod.rs  types.rs
lib/dw_dex/: Cargo.toml
lib/dw_dex/instruction_derive/: Cargo.toml
lib/dw_dex/instruction_derive/src/: lib.rs
lib/dw_dex/src/: addr.rs  annotations.rs  classes.rs  code.rs  errors.rs  fields.rs  hexlify.rs  instrs.rs  lib.rs  map.rs  methods.rs  mutf8.rs  parsers.rs  registers.rs  strings.rs  types.rs  values.rs  writers.rs
lib/dw_package/: Cargo.toml
lib/dw_package/src/: errors.rs  helpers.rs  lib.rs
lib/dw_resources/: Cargo.toml
lib/dw_resources/data/: nsc_system_and_user_stores_without_clear_traffic.axml  nsc_system_store_without_clear_traffic.axml
lib/dw_resources/src/: chunk.rs  errors.rs  lib.rs  manifest.rs  nsc.rs  parsers.rs  resources.rs  strings.rs  tables.rs  utils.rs  values.rs  writers.rs  xml.rs  xpath.rs
lib/dw_utils/: Cargo.toml
lib/dw_utils/src/: leb.rs  lib.rs  writers.rs  zipalign.rs
src/: bin.rs  cli.rs  errors.rs  lib.rs  owndex.rs  zipalign.rs
src/dw_aresources/: bin.rs  mod.rs
src/dw_callgraph/: bin.rs  mod.rs
src/dw_dexdissect/: bin.rs  mod.rs
src/dw_disas/: bin.rs  mod.rs
src/dw_hierarchy/: bin.rs  mod.rs
src/dw_information_flow/: bin.rs  mod.rs
src/dw_manifest/: bin.rs  mod.rs
src/dw_nsc/: bin.rs  mod.rs
src/dw_packageinfo/: bin.rs  mod.rs
src/dw_permissions/: bin.rs  mod.rs
src/dw_stats/: bin.rs  mod.rs
src/dw_strip/: bin.rs  mod.rs
src/dw_typecheck/: bin.rs  mod.rs
