[package]
name = "dw_analysis"
version = "1.2.0"
authors = ["DroidWorks Team <droidworks@ssi.gouv.fr>"]
edition = "2021"
description = "Analysis algorithms for Dalvik bytecode"
readme = "../../README.md"
categories = ["science", "compilers"]

[dependencies]
dw_dex = { path = "../dw_dex" }
dw_package = { path = "../dw_package" }
dw_utils = { path = "../dw_utils" }
html-escape = "0.2"
fixedbitset = "0.4"
lazy_static = "1.4"
log = "0.4"
petgraph = "0.6"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
