[package]
name = "dw_dex"
version = "1.2.0"
authors = ["DroidWorks Team <droidworks@ssi.gouv.fr>"]
edition = "2021"
description = "Dex data structures, parsers and writers"
readme = "../../README.md"
categories = ["data-structures", "parser-implementations"]

[dependencies]
adler32 = "1.2"
bitflags = "1.2"
dw_utils = { path = "../dw_utils" }
instruction_derive = { path = "instruction_derive" }
log = "0.4"
nom = "7.0"
serde = { version = "1.0", features = ["derive"] }
sha1 = { version = "0.10", features = ["std"] }
thiserror = "1.0"
