[package]
name = "dw_resources"
version = "1.2.0"
authors = ["DroidWorks Team <droidworks@ssi.gouv.fr>"]
edition = "2021"
description = "Manifest/Xml/Android resources data structures, parsers and writers"
readme = "../../README.md"
categories = ["data-structures", "parser-implementations"]

[dependencies]
dw_utils = { path = "../dw_utils" }
log = "0.4"
nom = "7.0"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
